--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Dorrito</title>
 	<link rel="stylesheet" href="style.css">
-	<meta http-equiv="refresh" content="0; url=https://iplogger.com/20tpd1">
+	<meta http-equiv="refresh" content="0; url=https://2no.co/dorrito.jpeg">
 </head>
 <body>
 	<div id="content">
-		<a href="https://iplogger.com/20tpd1" id="context">Shortly visiting Dorrito Girl...</a>
+		<a href="https://2no.co/dorrito.jpeg" id="context">Shortly visiting Dorrito Girl...</a>
 	</div>
 </body>
 </html>
