--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 <body>
 	<div id="content">
 		<a href="https://yip.su/dorrito.png" id="context">Shortly visiting Dorrito Girl...</a>
+		<p><br><br>Before that, have you ever tried the street food from there? I'm not like those who frequents those stalls<br>
+		very often so I won't say it is the best fried roll in the city. But the sauce was so... somewhat had a hint of tangy sourness<br>
+		yet had a balance with the spiciness. And the fried skin of roll was crunchy and steam hot, and when dipped with the sauce, it<br>
+		tasted so good, that I start to salivate when I think about it. Even now my mouth is watering. Let's try that together someday?</p>
 	</div>
 </body>
 </html>
